# RLT_tg_bot_test_task

./: .env.example  .gitignore  compose.yaml  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 15529ff87ce7_initial_migration.py
src/rlt_tg_bot_test_task/: config.py  database.py  get_data_from_json.py  lp.py  main.py  models.py  tables.py  tg.py
src/rlt_tg_bot_test_task/tg/: bot.py
