[project]
name = "rlt-tg-bot-test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "aiogram (>=3.23.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "rlt_tg_bot_test_task", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
