[project]
name = "rlt-tg-bot-test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "aiogram (>=3.23.0,<4.0.0)",
    "pydantic[email,timezone] (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "langchain (>=1.2.0,<2.0.0)",
    "langgraph (>=1.0.5,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "sqlacodegen (>=3.2.0,<4.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "openai (>=2.14.0,<3.0.0)",
    "langchain-openai (>=1.1.6,<2.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
]

[tool.poetry]
packages = [{include = "rlt_tg_bot_test_task", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
